kubernetes/apps/apps/homepage/homepage/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
